<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>rone</artifactId>
        <groupId>org.rone</groupId>
        <version>1.0.0</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>rone-web</artifactId>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <!--<profile>${env}</profile>-->
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.rone</groupId>
            <artifactId>rone-core</artifactId>
            <version>1.0.0</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-aop</artifactId>
        </dependency>
        <dependency>
            <groupId>org.mybatis.spring.boot</groupId>
            <artifactId>mybatis-spring-boot-starter</artifactId>
        </dependency>
        <!--<dependency>-->
        <!--    <groupId>org.springframework.boot</groupId>-->
        <!--    <artifactId>spring-boot-starter-jdbc</artifactId>-->
        <!--</dependency>-->
        <dependency>
            <groupId>io.springfox</groupId>
            <artifactId>springfox-swagger2</artifactId>
        </dependency>
        <dependency>
            <groupId>io.springfox</groupId>
            <artifactId>springfox-swagger-ui</artifactId>
        </dependency>
        <!--<dependency>-->
        <!--    <groupId>org.springframework.boot</groupId>-->
        <!--    <artifactId>spring-boot-starter-jetty</artifactId>-->
        <!--</dependency>-->
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>druid</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-freemarker</artifactId>
        </dependency>
    </dependencies>

    <!--定义一系列的配置信息，用于区分不同的运行环境-->
    <profiles>
        <!--开发环境-->
        <profile>
            <id>dev</id>
            <properties>
                <env>dev</env>
            </properties>
            <activation>
                <!--设置默认激活这个配置-->
                <activeByDefault>true</activeByDefault>
            </activation>
        </profile>
        <!--测试环境-->
        <profile>
            <id>test</id>
            <properties>
                <env>test</env>
            </properties>
        </profile>
        <!--生产环境-->
        <profile>
            <id>prod</id>
            <properties>
                <env>prod</env>
            </properties>
        </profile>
    </profiles>

    <!-- spring boot 打包插件-->
    <build>
        <finalName>${project.artifactId}</finalName>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <mainClass>org.rone.web.WebApplication</mainClass>
                    <!--使用远程调试 请打开下行关闭下下行注释 -->
                    <jvmArguments>-Xms256M -Xmx2048M -XX:MaxPermSize=512M
                        -XX:+UseConcMarkSweepGC</jvmArguments>
                    <executable>true</executable>
                </configuration>
            </plugin>
            <!--&lt;!&ndash; jetty插件 &ndash;&gt;-->
            <!--<plugin>-->
            <!--    <groupId>org.mortbay.jetty</groupId>-->
            <!--    <artifactId>maven-jetty-plugin</artifactId>-->
            <!--    <version>6.1.26</version>-->
            <!--    <configuration>-->
            <!--        <webAppConfig>-->
            <!--            <contextPath>/</contextPath>-->
            <!--        </webAppConfig>-->
            <!--        <connectors>-->
            <!--            <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">-->
            <!--                <port>8083</port>-->
            <!--            </connector>-->
            <!--        </connectors>-->
            <!--        <reload>automatic</reload>-->
            <!--        &lt;!&ndash; <webAppSourceDirectory>${basedir}/src/main/webapp</webAppSourceDirectory> &ndash;&gt;-->
            <!--    </configuration>-->
            <!--</plugin>-->
        </plugins>
    </build>
</project>